--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = 'http://localhost/api/v1/'
 
-VUE_CLI_BABEL_TRANSPILE_MODULES = true
+#VUE_CLI_BABEL_TRANSPILE_MODULES = true
