--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,6 @@
 # just a flag
-ENV = 'development'
+ENV = 'production'
 
 # base api
 VUE_APP_BASE_API = 'http://localhost/api/v1/'
 
-VUE_CLI_BABEL_TRANSPILE_MODULES = true
